--- a/index.html
+++ b/index.html
@@ -13,119 +13,120 @@
   <body>
     <div class="box">
       <div class="container">
-            <h1>Accordion</h1>
+        <h1>Accordion</h1>
 
-            <div class="accordion">
-            <div class="accordionColumn open">
-                <div class="title">Lorem ipsum dolor sit amet.</div>
-                <div class="desc">
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-                Aspernatur numquam harum dolores consequuntur eaque laboriosam
-                similique maiores consequatur a veritatis! Corporis fugit
-                molestiae eius, <a href="javascript:;">adipisci</a> veritatis impedit amet quaerat minus.
-                Sapiente magni suscipit officiis illo esse quibusdam cumque
-                nesciunt molestiae labore, enim mollitia ipsam voluptatum tenetur
-                impedit voluptates!
-                <ul>
-                    <li>Lorem ipsum dolor sit amet.</li>
-                    <li>Lorem, ipsum dolor..</li>
-                    <li>Lorem ipsum dolor sit amet.</li>
-                    <li>Lorem, ipsum dolor..</li>
-                    <li>Lorem ipsum dolor sit amet consectetur.</li>
+        <div class="accordion">
+          <div class="accordionItem open">
+            <div class="title">Lorem ipsum dolor sit amet.</div>
+            <div class="desc">
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+              Aspernatur numquam harum dolores consequuntur eaque laboriosam
+              similique maiores consequatur a veritatis! Corporis fugit
+              molestiae eius, <a href="javascript:;">adipisci</a> veritatis
+              impedit amet quaerat minus. Sapiente magni suscipit officiis illo
+              esse quibusdam cumque nesciunt molestiae labore, enim mollitia
+              ipsam voluptatum tenetur impedit voluptates!
+              <ul>
+                <li>Lorem ipsum dolor sit amet.</li>
+                <li>Lorem, ipsum dolor..</li>
+                <li>Lorem ipsum dolor sit amet.</li>
+                <li>Lorem, ipsum dolor..</li>
+                <li>Lorem ipsum dolor sit amet consectetur.</li>
+              </ul>
+            </div>
+          </div>
+          <div class="accordionItem">
+            <div class="title">Lorem ipsum dolor sit amet.</div>
+            <div class="desc">
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+              Aspernatur numquam harum dolores consequuntur eaque laboriosam
+              similique maiores consequatur a veritatis! Corporis fugit
+              molestiae eius, <a href="javascript:;">adipisci</a> veritatis
+              impedit amet quaerat minus. Sapiente magni suscipit officiis illo
+              esse quibusdam cumque nesciunt molestiae labore, enim mollitia
+              ipsam voluptatum tenetur impedit voluptates! Impedit fugiat
+              quibusdam reiciendis perspiciatis tempora aperiam odit nesciunt
+              quaerat, ipsum quisquam! Assumenda accusantium animi consequatur
+              nihil pariatur voluptate, optio voluptatibus odio, expedita modi
+              quia, veritatis temporibus voluptas voluptatum.
+            </div>
+          </div>
+          <div class="accordionItem">
+            <div class="title">Lorem ipsum dolor sit amet.</div>
+            <div class="desc">
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+              Aspernatur numquam harum dolores consequuntur eaque laboriosam
+              similique maiores consequatur a veritatis! Corporis fugit
+              molestiae eius, <a href="javascript:;">adipisci</a> veritatis
+              impedit amet quaerat minus. Sapiente magni suscipit officiis illo
+              esse quibusdam cumque nesciunt molestiae labore, enim mollitia
+              ipsam voluptatum tenetur impedit voluptates! Impedit fugiat
+              quibusdam reiciendis perspiciatis tempora aperiam odit nesciunt
+              quaerat, ipsum quisquam! Assumenda accusantium animi consequatur
+              nihil pariatur voluptate, optio voluptatibus odio, expedita modi
+              quia, veritatis temporibus voluptas voluptatum.
+            </div>
+          </div>
+          <div class="accordionItem">
+            <div class="title">Lorem ipsum dolor sit amet.</div>
+            <div class="desc">
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+              Aspernatur numquam harum dolores consequuntur eaque laboriosam
+              similique maiores consequatur a veritatis! Corporis fugit
+              molestiae eius, <a href="javascript:;">adipisci</a> veritatis
+              impedit amet quaerat minus. Sapiente magni suscipit officiis illo
+              esse quibusdam cumque nesciunt molestiae labore, enim mollitia
+              ipsam voluptatum tenetur impedit voluptates! Impedit fugiat
+              quibusdam reiciendis perspiciatis tempora aperiam odit nesciunt
+              quaerat, ipsum quisquam! Assumenda accusantium animi consequatur
+              nihil pariatur voluptate, optio voluptatibus odio, expedita modi
+              quia, veritatis temporibus voluptas voluptatum.
+            </div>
+          </div>
+          <div class="accordionItem">
+            <div class="title">Lorem ipsum dolor sit amet.</div>
+            <div class="desc">
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+              Aspernatur numquam harum dolores consequuntur eaque laboriosam
+              similique maiores consequatur a veritatis! Corporis fugit
+              molestiae eius, <a href="javascript:;">adipisci</a> veritatis
+              impedit amet quaerat minus. Sapiente magni suscipit officiis illo
+              esse quibusdam cumque nesciunt molestiae labore, enim mollitia
+              ipsam voluptatum tenetur impedit voluptates! Impedit fugiat
+              quibusdam reiciendis perspiciatis tempora aperiam odit nesciunt
+              quaerat, ipsum quisquam! Assumenda accusantium animi consequatur
+              nihil pariatur voluptate, optio voluptatibus odio, expedita modi
+              quia, veritatis temporibus voluptas voluptatum.
+            </div>
+          </div>
+          <div class="accordionItem">
+            <div class="title">Lorem ipsum dolor sit amet.</div>
+            <div class="desc">
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+              Aspernatur numquam harum dolores consequuntur eaque laboriosam
+              similique maiores consequatur a veritatis! Corporis fugit
+              molestiae eius, <a href="javascript:;">adipisci</a> veritatis
+              impedit amet quaerat minus. Sapiente magni suscipit officiis illo
+              esse quibusdam cumque nesciunt molestiae labore, enim mollitia
+              ipsam voluptatum tenetur impedit voluptates! Impedit fugiat
+              quibusdam reiciendis perspiciatis tempora aperiam odit nesciunt
+              quaerat, ipsum quisquam! Assumenda accusantium animi consequatur
+              nihil pariatur voluptate, optio voluptatibus odio, expedita modi
+              quia, veritatis temporibus voluptas voluptatum.
+            </div>
+          </div>
+        </div>
 
-                </ul>
-                </div>
-            </div>
-            <div class="accordionColumn">
-                <div class="title">Lorem ipsum dolor sit amet.</div>
-                <div class="desc">
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-                Aspernatur numquam harum dolores consequuntur eaque laboriosam
-                similique maiores consequatur a veritatis! Corporis fugit
-                molestiae eius, <a href="javascript:;">adipisci</a> veritatis impedit amet quaerat minus.
-                Sapiente magni suscipit officiis illo esse quibusdam cumque
-                nesciunt molestiae labore, enim mollitia ipsam voluptatum tenetur
-                impedit voluptates! Impedit fugiat quibusdam reiciendis
-                perspiciatis tempora aperiam odit nesciunt quaerat, ipsum
-                quisquam! Assumenda accusantium animi consequatur nihil pariatur
-                voluptate, optio voluptatibus odio, expedita modi quia, veritatis
-                temporibus voluptas voluptatum.
-                </div>
-            </div>
-            <div class="accordionColumn">
-                <div class="title">Lorem ipsum dolor sit amet.</div>
-                <div class="desc">
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-                Aspernatur numquam harum dolores consequuntur eaque laboriosam
-                similique maiores consequatur a veritatis! Corporis fugit
-                molestiae eius, <a href="javascript:;">adipisci</a> veritatis impedit amet quaerat minus.
-                Sapiente magni suscipit officiis illo esse quibusdam cumque
-                nesciunt molestiae labore, enim mollitia ipsam voluptatum tenetur
-                impedit voluptates! Impedit fugiat quibusdam reiciendis
-                perspiciatis tempora aperiam odit nesciunt quaerat, ipsum
-                quisquam! Assumenda accusantium animi consequatur nihil pariatur
-                voluptate, optio voluptatibus odio, expedita modi quia, veritatis
-                temporibus voluptas voluptatum.
-                </div>
-            </div>
-            <div class="accordionColumn">
-                <div class="title">Lorem ipsum dolor sit amet.</div>
-                <div class="desc">
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-                Aspernatur numquam harum dolores consequuntur eaque laboriosam
-                similique maiores consequatur a veritatis! Corporis fugit
-                molestiae eius, <a href="javascript:;">adipisci</a> veritatis impedit amet quaerat minus.
-                Sapiente magni suscipit officiis illo esse quibusdam cumque
-                nesciunt molestiae labore, enim mollitia ipsam voluptatum tenetur
-                impedit voluptates! Impedit fugiat quibusdam reiciendis
-                perspiciatis tempora aperiam odit nesciunt quaerat, ipsum
-                quisquam! Assumenda accusantium animi consequatur nihil pariatur
-                voluptate, optio voluptatibus odio, expedita modi quia, veritatis
-                temporibus voluptas voluptatum.
-                </div>
-            </div>
-            <div class="accordionColumn">
-                <div class="title">Lorem ipsum dolor sit amet.</div>
-                <div class="desc">
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-                Aspernatur numquam harum dolores consequuntur eaque laboriosam
-                similique maiores consequatur a veritatis! Corporis fugit
-                molestiae eius, <a href="javascript:;">adipisci</a> veritatis impedit amet quaerat minus.
-                Sapiente magni suscipit officiis illo esse quibusdam cumque
-                nesciunt molestiae labore, enim mollitia ipsam voluptatum tenetur
-                impedit voluptates! Impedit fugiat quibusdam reiciendis
-                perspiciatis tempora aperiam odit nesciunt quaerat, ipsum
-                quisquam! Assumenda accusantium animi consequatur nihil pariatur
-                voluptate, optio voluptatibus odio, expedita modi quia, veritatis
-                temporibus voluptas voluptatum.
-                </div>
-            </div>
-            <div class="accordionColumn">
-                <div class="title">Lorem ipsum dolor sit amet.</div>
-                <div class="desc">
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-                Aspernatur numquam harum dolores consequuntur eaque laboriosam
-                similique maiores consequatur a veritatis! Corporis fugit
-                molestiae eius, <a href="javascript:;">adipisci</a> veritatis impedit amet quaerat minus.
-                Sapiente magni suscipit officiis illo esse quibusdam cumque
-                nesciunt molestiae labore, enim mollitia ipsam voluptatum tenetur
-                impedit voluptates! Impedit fugiat quibusdam reiciendis
-                perspiciatis tempora aperiam odit nesciunt quaerat, ipsum
-                quisquam! Assumenda accusantium animi consequatur nihil pariatur
-                voluptate, optio voluptatibus odio, expedita modi quia, veritatis
-                temporibus voluptas voluptatum.
-                </div>
-            </div>
-            </div>
-            
-            <div class="devLinkBox">
-                <a href="https://www.linkedin.com/in/efeegrekci/" target="_blank">Efe Eğrekçi</a>
-            </div>
+        <div class="devLinkBox">
+          <a href="https://www.linkedin.com/in/efeegrekci/" target="_blank"
+            >Efe Eğrekçi</a
+          >
+        </div>
       </div>
     </div>
 
     <script src="assets/js/vendors/jquery.js"></script>
     <script src="assets/js/main.js"></script>
+
   </body>
 </html>
-
